# drf-api-permissions-postgres

./: .gitignore  Dockerfile  README.md  db.sqlite3  db.sqlite3.old  db.sqlite3.old.old  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_auto_20211124_0303.py
blogapi_permissions/: manage.py
blogapi_permissions/blogapi_permissions/: asgi.py  settings.py  urls.py  wsgi.py
blogapi_postgress/: manage.py
blogapi_postgress/blogapi_postgress/: asgi.py  settings.py  urls.py  wsgi.py
todo/: settings.py  urls.py
todoapi/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
todoapi/migrations/: 0001_initial.py  0002_alter_task_user.py  0002_remove_task_highlighted.py
todoapi/migrations.old/: 0001_initial.py  0002_alter_task_user.py  0003_auto_20211123_0523.py
